# differs

./: .gitignore  Cargo.toml  README.md
differs/: Cargo.toml
differs-derive/: Cargo.toml
differs-derive/src/: derive_diff.rs  derive_fields.rs  lib.rs
differs/examples/: changes.rs  complex.rs  fields.rs  vec-changes.rs  watch.rs
differs/src/: changed.rs  field_paths.rs  lib.rs
differs/tests/: test_diff_derive.rs  test_fields_derive.rs
